[package]
name = "cumulus-test-service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "test-parachain"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
criterion = { features = ["async_tokio"], workspace = true, default-features = true }
cumulus-client-cli = { default-features = true, workspace = true }
cumulus-client-collator = { default-features = true, workspace = true }
cumulus-client-consensus-aura = { default-features = true, workspace = true }
cumulus-client-consensus-common = { default-features = true, workspace = true }
cumulus-client-parachain-inherent = { default-features = true, workspace = true }
cumulus-client-pov-recovery = { default-features = true, workspace = true }
cumulus-client-service = { default-features = true, workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-weight-reclaim = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-inprocess-interface = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }
cumulus-relay-chain-minimal-node = { default-features = true, workspace = true }
cumulus-test-relay-sproof-builder = { default-features = true, workspace = true }
cumulus-test-runtime = { workspace = true }
frame-system = { default-features = true, workspace = true }
frame-system-rpc-runtime-api = { default-features = true, workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pallet-timestamp = { default-features = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
polkadot-cli = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-service = { default-features = true, workspace = true }
polkadot-test-service = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true, default-features = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-block-builder = { default-features = true, workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-cli = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-aura = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-executor-common = { default-features = true, workspace = true }
sc-executor-wasmtime = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
sp-api = { default-features = true, workspace = true }
sp-arithmetic = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
sp-tracing = { default-features = true, workspace = true }
substrate-test-client = { workspace = true }
tokio = { features = ["macros"], workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
url = { workspace = true }

[dev-dependencies]
cumulus-test-client = { workspace = true }
futures = { workspace = true }

[features]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-weight-reclaim/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-test-client/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"polkadot-test-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

[[bench]]
name = "transaction_throughput"
harness = false

[[bench]]
name = "block_import"
harness = false

[[bench]]
name = "block_production"
harness = false

[[bench]]
name = "block_production_glutton"
harness = false

[[bench]]
name = "block_import_glutton"
harness = false

[[bench]]
name = "validate_block"
harness = false

[[bench]]
name = "validate_block_glutton"
harness = false
