[package]
name = "xcm-emulator"
description = "Test kit to emulate XCM program execution."
version = "0.27.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
array-bytes = { workspace = true }
codec = { workspace = true, default-features = true }
cumulus-pallet-parachain-system = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-primitives-parachain-inherent = { default-features = true, workspace = true }
cumulus-test-relay-sproof-builder = { default-features = true, workspace = true }
frame-support = { default-features = true, workspace = true }
frame-system = { default-features = true, workspace = true }
impl-trait-for-tuples = { workspace = true }
pallet-aura = { default-features = true, workspace = true }
pallet-balances = { default-features = true, workspace = true }
pallet-message-queue = { default-features = true, workspace = true }
pallet-timestamp = { default-features = true, workspace = true }
parachains-common = { default-features = true, workspace = true }
paste = { workspace = true, default-features = true }
polkadot-parachain-primitives = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-runtime-parachains = { default-features = true, workspace = true }
sp-arithmetic = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-crypto-hashing = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-tracing = { default-features = true, workspace = true }
tracing = { workspace = true, default-features = true }
xcm = { default-features = true, workspace = true }
xcm-executor = { default-features = true, workspace = true }
xcm-simulator = { default-features = true, workspace = true }
