[package]
name = "cumulus-zombienet-sdk-tests"
version = "0.1.0"
description = "Zomebienet-sdk tests for cumulus."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures = { workspace = true }
zombienet-sdk = { workspace = true }
zombienet-orchestrator = { workspace = true }
zombienet-configuration = { workspace = true }
cumulus-zombienet-sdk-helpers.workspace = true
sp-rpc.workspace = true
sp-rpc.default-features = true
sp-statement-store = { workspace = true, features = ["serde"], default-features = true }
sc-network-statement.workspace = true
sc-network-statement.default-features = true
sc-statement-store = { workspace = true, features = ["test-helpers"], default-features = true }
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-crypto-hashing.workspace = true
sp-crypto-hashing.default-features = true
sp-version.workspace = true
sp-version.default-features = true
sp-maybe-compressed-blob.workspace = true
sp-maybe-compressed-blob.default-features = true
parity-wasm = { workspace = true }
sc-executor.workspace = true
sc-executor.default-features = true
sc-executor-common.workspace = true
sc-executor-common.default-features = true
frame-support.workspace = true
cumulus-primitives-core.workspace = true
cumulus-test-runtime.workspace = true
sp-runtime.workspace = true
sp-runtime.default-features = true
verifiable = { workspace = true, default-features = true }
sp-consensus-aura.workspace = true
sp-consensus-aura.default-features = true
sp-consensus-slots.workspace = true
sp-consensus-slots.default-features = true
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
rstest = { workspace = true }
subxt = { workspace = true, features = ["reconnecting-rpc-client"] }
statement-store-subxt = { package = "subxt", version = "0.50" }
statement-store-subxt-signer = { package = "subxt-signer", version = "0.50", features = ["sr25519"] }

[features]
zombie-ci = []
generate-snapshots = []
