[package]
name = "polkadot-node-collation-generation"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Collator-side subsystem that handles incoming candidate submissions from the parachain."
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["bit-vec", "derive"], workspace = true }
futures = { workspace = true }
gum = { default-features = true, workspace = true }
polkadot-erasure-coding = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
schnellru = { workspace = true }
sp-core = { default-features = true, workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
polkadot-node-subsystem-test-helpers = { workspace = true }
polkadot-primitives = { features = ["test"], workspace = true, default-features = false }
polkadot-primitives-test-helpers = { workspace = true }
rstest = { workspace = true }
sp-keyring = { default-features = true, workspace = true }
