[package]
name = "polkadot-test-malus"
description = "Misbehaving nodes for local testnets, system and Simnet tests."
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[[bin]]
name = "malus"
path = "src/malus.rs"

# Use artifact dependencies once stable.
# See https://github.com/rust-lang/cargo/issues/9096.
[[bin]]
name = "polkadot-execute-worker"
path = "../../src/bin/execute-worker.rs"
# Prevent rustdoc error. Already documented from top-level Cargo.toml.
doc = false
[[bin]]
name = "polkadot-prepare-worker"
path = "../../src/bin/prepare-worker.rs"
# Prevent rustdoc error. Already documented from top-level Cargo.toml.
doc = false

[dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
clap = { features = ["derive"], workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
gum = { default-features = true, workspace = true }
polkadot-cli = { features = ["malus", "rococo-native", "westend-native"], workspace = true, default-features = true }
polkadot-erasure-coding = { default-features = true, workspace = true }
polkadot-node-core-pvf-common = { default-features = true, workspace = true }
polkadot-node-core-pvf-execute-worker = { default-features = true, workspace = true }
polkadot-node-core-pvf-prepare-worker = { default-features = true, workspace = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-types = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
rand = { workspace = true, default-features = true }
sp-core = { default-features = true, workspace = true }

[dev-dependencies]
futures = { features = ["thread-pool"], workspace = true }
polkadot-node-subsystem-test-helpers = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { default-features = true, workspace = true }

[features]
default = []
fast-runtime = ["polkadot-cli/fast-runtime"]
