[package]
name = "polkadot-node-metrics"
description = "Subsystem metric helpers"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
futures-timer = { workspace = true }

bs58 = { features = ["alloc"], workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
metered = { features = ["futures_channel"], workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-cli = { default-features = false, workspace = true }
sc-service = { default-features = false, workspace = true }
sc-tracing = { default-features = true, workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { features = ["client-legacy", "tokio"], workspace = true }
polkadot-test-service = { features = ["runtime-metrics"], workspace = true }
prometheus-parse = { workspace = true }
sc-service = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
tokio = { workspace = true, default-features = true }

[features]
default = []
runtime-metrics = []
runtime-benchmarks = [
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-test-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
]
