[package]
name = "polkadot-node-primitives"
description = "Primitives types for the Node-side"
version = "24.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitvec = { features = ["alloc"], workspace = true }
bounded-vec = { workspace = true }
codec = { features = ["derive"], workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sc-keystore = { workspace = true }
schnorrkel = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-consensus-slots = { workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-maybe-compressed-blob = { default-features = true, workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = { workspace = true, default-features = false }
