[package]
name = "polkadot-service"
rust-version = "1.60"
version = "32.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Utils to tie different Polkadot components together and allow instantiation of a node."
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
frame-benchmarking = { default-features = true, workspace = true }
frame-benchmarking-cli = { default-features = true, workspace = true }
frame-metadata-hash-extension = { optional = true, workspace = true, default-features = true }
frame-system = { default-features = true, workspace = true }
frame-system-rpc-runtime-api = { default-features = true, workspace = true }
mmr-gadget = { default-features = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-transaction-payment-rpc-runtime-api = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-authority-discovery = { default-features = true, workspace = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-babe = { default-features = true, workspace = true }
sc-consensus-beefy = { default-features = true, workspace = true }
sc-consensus-grandpa = { default-features = true, workspace = true }
sc-consensus-slots = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-sync = { default-features = true, workspace = true }
sc-offchain = { default-features = true, workspace = true }
sc-service = { workspace = true }
sc-sync-state-rpc = { default-features = true, workspace = true }
sc-sysinfo = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-authority-discovery = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-consensus-beefy = { default-features = true, workspace = true }
sp-consensus-grandpa = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
sp-inherents = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-mmr-primitives = { default-features = true, workspace = true }
sp-offchain = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-session = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
sp-transaction-pool = { default-features = true, workspace = true }
sp-version = { default-features = true, workspace = true }
sp-weights = { default-features = true, workspace = true }

# External Crates
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
gum = { default-features = true, workspace = true }
is_executable = { workspace = true }
kvdb = { workspace = true }
kvdb-rocksdb = { optional = true, workspace = true }
log = { workspace = true, default-features = true }
parity-db = { optional = true, workspace = true }
parking_lot = { workspace = true, default-features = true }
polkadot-approval-distribution = { optional = true, workspace = true, default-features = true }
polkadot-availability-bitfield-distribution = { optional = true, workspace = true, default-features = true }
polkadot-availability-distribution = { optional = true, workspace = true, default-features = true }
polkadot-availability-recovery = { optional = true, workspace = true, default-features = true }
polkadot-collator-protocol = { optional = true, workspace = true, default-features = true }
polkadot-core-primitives = { default-features = true, workspace = true }
polkadot-dispute-distribution = { optional = true, workspace = true, default-features = true }
polkadot-gossip-support = { optional = true, workspace = true, default-features = true }
polkadot-network-bridge = { optional = true, workspace = true, default-features = true }
polkadot-node-collation-generation = { optional = true, workspace = true, default-features = true }
polkadot-node-core-approval-voting = { optional = true, workspace = true, default-features = true }
polkadot-node-core-approval-voting-parallel = { optional = true, workspace = true, default-features = true }
polkadot-node-core-av-store = { optional = true, workspace = true, default-features = true }
polkadot-node-core-backing = { optional = true, workspace = true, default-features = true }
polkadot-node-core-bitfield-signing = { optional = true, workspace = true, default-features = true }
polkadot-node-core-candidate-validation = { optional = true, workspace = true, default-features = true }
polkadot-node-core-chain-api = { optional = true, workspace = true, default-features = true }
polkadot-node-core-chain-selection = { optional = true, workspace = true, default-features = true }
polkadot-node-core-dispute-coordinator = { optional = true, workspace = true, default-features = true }
polkadot-node-core-parachains-inherent = { default-features = true, workspace = true }
polkadot-node-core-prospective-parachains = { optional = true, workspace = true, default-features = true }
polkadot-node-core-provisioner = { optional = true, workspace = true, default-features = true }
polkadot-node-core-pvf = { optional = true, workspace = true, default-features = true }
polkadot-node-core-pvf-checker = { optional = true, workspace = true, default-features = true }
polkadot-node-core-runtime-api = { optional = true, workspace = true, default-features = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-types = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-rpc = { default-features = true, workspace = true }
polkadot-runtime-parachains = { default-features = true, workspace = true }
polkadot-statement-distribution = { optional = true, workspace = true, default-features = true }
rococo-runtime = { optional = true, workspace = true }
rococo-runtime-constants = { optional = true, workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
westend-runtime = { optional = true, workspace = true, default-features = true }
westend-runtime-constants = { optional = true, workspace = true, default-features = true }
xcm = { default-features = true, workspace = true }
xcm-runtime-apis = { default-features = true, workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
polkadot-node-subsystem-test-helpers = { workspace = true }
polkadot-primitives-test-helpers = { workspace = true }
polkadot-test-client = { workspace = true }
sp-tracing = { workspace = true, default-features = false }
tempfile = { workspace = true }

[features]
default = ["db", "full-node"]
db = ["sc-service/rocksdb"]
full-node = [
	"kvdb-rocksdb",
	"parity-db",
	"polkadot-approval-distribution",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-approval-voting",
	"polkadot-node-core-approval-voting-parallel",
	"polkadot-node-core-av-store",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-prospective-parachains",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-pvf",
	"polkadot-node-core-pvf-checker",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
]

# Configure the native runtimes to use.
westend-native = [
	"frame-metadata-hash-extension",
	"westend-runtime",
	"westend-runtime-constants",
]
rococo-native = [
	"frame-metadata-hash-extension",
	"rococo-runtime",
	"rococo-runtime-constants",
]

# Generate the metadata hash needed for CheckMetadataHash
# in the test runtimes.
metadata-hash = [
	"rococo-runtime?/metadata-hash",
	"westend-runtime?/metadata-hash",
]

runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"polkadot-test-client/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"westend-runtime-constants?/runtime-benchmarks",
	"westend-runtime?/runtime-benchmarks",
	"xcm-runtime-apis/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"rococo-runtime?/try-runtime",
	"sp-runtime/try-runtime",
	"westend-runtime?/try-runtime",
]
fast-runtime = [
	"rococo-runtime?/fast-runtime",
	"westend-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"polkadot-runtime-parachains/runtime-metrics",
	"rococo-runtime?/runtime-metrics",
	"westend-runtime?/runtime-metrics",
]
