[package]
name = "polkadot-subsystem-bench"
description = "Subsystem performance benchmark client"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lib]
name = "polkadot_subsystem_bench"
path = "src/lib/lib.rs"

[[bin]]
name = "subsystem-bench"
path = "src/cli/subsystem-bench.rs"

# Prevent rustdoc error. Already documented from top-level Cargo.toml.
doc = false

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true, default-features = true }
clap = { features = ["derive"], workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
gum = { default-features = true, workspace = true }
hex = { workspace = true, default-features = true }
kvdb-memorydb = { workspace = true }
polkadot-availability-bitfield-distribution = { default-features = true, workspace = true }
polkadot-availability-distribution = { default-features = true, workspace = true }
polkadot-availability-recovery = { features = ["subsystem-benchmarks"], workspace = true, default-features = true }
polkadot-dispute-distribution = { default-features = true, workspace = true }
polkadot-node-core-av-store = { default-features = true, workspace = true }
polkadot-node-core-dispute-coordinator = { default-features = true, workspace = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-types = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { workspace = true, features = ["test"] }
polkadot-statement-distribution = { default-features = true, workspace = true }
# `rand` only supports uniform distribution, we need normal distribution for latency.
rand = { workspace = true, default-features = true }
rand_distr = { workspace = true }
sc-keystore = { default-features = true, workspace = true }
sha1 = { workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-tracing = { workspace = true }
tikv-jemallocator = { features = ["profiling", "unprefixed_malloc_on_supported_platforms"], workspace = true, optional = true }

codec = { features = ["derive", "std"], workspace = true, default-features = true }
itertools = { workspace = true }
polkadot-approval-distribution = { default-features = true, workspace = true }
polkadot-node-core-approval-voting = { default-features = true, workspace = true }
polkadot-node-core-approval-voting-parallel = { default-features = true, workspace = true }
polkadot-node-metrics = { default-features = true, workspace = true }
polkadot-node-subsystem-test-helpers = { workspace = true }
polkadot-primitives-test-helpers = { workspace = true }
prometheus = { workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-types = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { default-features = true, workspace = true }
tokio = { features = ["parking_lot", "rt-multi-thread"], workspace = true, default-features = true }

orchestra = { features = ["futures_channel"], workspace = true }
paste = { workspace = true, default-features = true }
pyroscope = { workspace = true }
pyroscope_pprofrs = { workspace = true }
rand_chacha = { workspace = true, default-features = true }
strum = { features = ["derive"], workspace = true, default-features = true }

[features]
default = []
memprofile = [
	"dep:tikv-jemallocator",
]
