[package]
name = "polkadot-node-subsystem-test-helpers"
description = "Subsystem traits and message definitions"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true, default-features = true }
polkadot-erasure-coding = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-util = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-utils = { default-features = true, workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
