[package]
name = "polkadot-node-subsystem-types"
description = "Subsystem traits and message definitions"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true, default-features = true }
fatality = { workspace = true }
futures = { workspace = true }
orchestra = { features = ["futures_channel"], workspace = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-statement-table = { default-features = true, workspace = true }
prometheus-endpoint = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-types = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
smallvec = { workspace = true, default-features = true }
sp-api = { default-features = true, workspace = true }
sp-authority-discovery = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus-babe = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
thiserror = { workspace = true }
