[package]
name = "polkadot-node-subsystem-util"
description = "Subsystem traits and message definitions"
version = "29.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
fatality = { workspace = true }
futures = { workspace = true }
gum = { default-features = true, workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
schnellru = { workspace = true }
thiserror = { workspace = true }

metered = { features = ["futures_channel"], workspace = true }
polkadot-erasure-coding = { default-features = true, workspace = true }
polkadot-node-metrics = { default-features = true, workspace = true }
polkadot-node-network-protocol = { default-features = true, workspace = true }
polkadot-node-primitives = { default-features = true, workspace = true }
polkadot-node-subsystem = { default-features = true, workspace = true }
polkadot-node-subsystem-types = { default-features = true, workspace = true }
polkadot-overseer = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
sp-application-crypto = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }

kvdb = { workspace = true }
parity-db = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
kvdb-shared-tests = { workspace = true }
polkadot-node-subsystem-test-helpers = { workspace = true }
polkadot-primitives-test-helpers = { workspace = true }
tempfile = { workspace = true }
